# LLOYD-VOICE

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py
src/lloyd_voice/: cli.py
src/lloyd_voice/core/: __init__.py  audio.py  commands.py  transcriber.py
src/lloyd_voice/platform/: text_injection.py
src/lloyd_voice/session/: context.py
src/lloyd_voice/ui/: app.py
src/lloyd_voice/ui/static/: app.js  index.html  style.css
tests/: simulations.py  test_commands.py
